--- a/flutter_clean_architecture/pubspec.yaml
+++ b/flutter_clean_architecture/pubspec.yaml
@@ -34,10 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5+1
+  equatable: ^2.0.8
+  get_it: ^9.2.0
+  intl: ^0.20.2
+  floor: ^1.5.0
+  flutter_hooks: ^0.21.3+1
+  cached_network_image: ^3.4.1
+  retrofit: ^4.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  floor_generator: ^1.5.0
+  build_runner: ^2.4.6
+  retrofit_generator: ^4.9.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
