--- a/flutter_clean_architecture/pubspec.yaml
+++ b/flutter_clean_architecture/pubspec.yaml
@@ -42,14 +42,14 @@ dependencies:
   flutter_hooks: ^0.21.3+1
   cached_network_image: ^3.4.1
   retrofit: ^4.9.2
+  dio: ^5.9.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   floor_generator: ^1.5.0
   build_runner: ^2.4.6
-  retrofit_generator: ^4.9.2
-
+  retrofit_generator: ^8.2.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
